--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -10,7 +10,6 @@
       "locale": "pl-PL",
       "monikers": [],
       "open_to_public_contributors": true,
-
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
@@ -31,7 +30,9 @@
     }
   ],
   "notification_subscribers": [],
-  "branches_to_filter": [],
+  "branches_to_filter": [
+    "live-sxs"
+  ],
   "skip_source_output_uploading": false,
   "git_repository_branch_open_to_public_contributors": "live",
   "dependent_repositories": [
@@ -42,7 +43,6 @@
       "branch_mapping": {}
     }
   ],
-  "need_generate_pdf_url_template": false,
   "dependent_packages": [
     {
       "path_to_root": "_dependentPackages/azurecli.plugins",
