Commit translated content

--- a/docs-conceptual/azurermps-5.1.1/toc.yml
+++ b/docs-conceptual/azurermps-5.1.1/toc.yml
@@ -37,10 +37,11 @@
       items:
         - name: Korzystanie z modułów eksperymentalnych
           href: using-experimental-modules.md
-        - name: Równoczesne uruchamianie poleceń cmdlet przy użyciu zadań programu PowerShell
-          href: using-psjobs.md
     - name: Informacje o wersji
       href: release-notes-azureps.md
+      items:
+        - name: Istotne zmiany dotyczące programu Azure PowerShell 5.x
+          href: migration-guide.5.0.0.md
 - name: Przykładowe skrypty
   items:
     - name: Maszyny wirtualne z systemem Linux
