--- a/docs-conceptual/azurermps-3.8.0/toc.yml
+++ b/docs-conceptual/azurermps-3.8.0/toc.yml
@@ -29,6 +29,9 @@
           href: 'https://docs.microsoft.com/en-us/azure/azure-resource-manager/resource-manager-powershell-sas-token'
     - name: Informacje o wersji
       href: release-notes-azureps.md
+      items:
+        - name: Istotne zmiany dotyczące programu Azure PowerShell 3.x
+          href: migration-guide.3.0.0.md
 - name: Przykładowe skrypty
   items:
     - name: Maszyny wirtualne z systemem Linux
