--- a/docs-conceptual/azurermps-4.4.1/toc.yml
+++ b/docs-conceptual/azurermps-4.4.1/toc.yml
@@ -39,6 +39,9 @@
           href: using-experimental-modules.md
     - name: Informacje o wersji
       href: release-notes-azureps.md
+      items:
+        - name: Istotne zmiany dotyczące programu Azure PowerShell 4.x
+          href: migration-guide.4.0.0.md
 - name: Przykładowe skrypty
   items:
     - name: Maszyny wirtualne z systemem Linux
