--- a/docs-conceptual/azurermps-5.3.0/toc.yml
+++ b/docs-conceptual/azurermps-5.3.0/toc.yml
@@ -37,6 +37,8 @@
       items:
         - name: Korzystanie z modułów eksperymentalnych
           href: using-experimental-modules.md
+        - name: Zadania programu PowerShell
+          href: using-psjobs.md
     - name: Informacje o wersji
       href: release-notes-azureps.md
       items:
