--- a/docs-conceptual/azurermps-5.4.0/toc.yml
+++ b/docs-conceptual/azurermps-5.4.0/toc.yml
@@ -37,13 +37,17 @@
       items:
         - name: Korzystanie z modułów eksperymentalnych
           href: using-experimental-modules.md
-        - name: Zadania programu PowerShell
+        - name: Używanie zadań programu PowerShell
           href: using-psjobs.md
     - name: Informacje o wersji
       href: release-notes-azureps.md
       items:
         - name: Istotne zmiany dotyczące programu Azure PowerShell 5.x
           href: migration-guide.5.0.0.md
+- name: Samouczki
+  items:
+    - name: Tworzenie maszyn wirtualnych
+      href: azureps-vm-tutorial.yml
 - name: Przykładowe skrypty
   items:
     - name: Maszyny wirtualne z systemem Linux
